--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chat-roulette-server",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,3 +15,4 @@
     "socket.io": "^4.8.1"
   }
 }
+
